force-app/main/default/objects/sked__Resource_Requirement__c/sked__Resource_Requirement__c.object-meta.xml
<CustomObject>
    <label>Resource Requirement</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Resource Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>