force-app/main/default/objects/sked__Resource_Requirement__c/fields/sked__Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Job__c</fullName>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Resource Requirements</relationshipLabel>
    <relationshipName>Resource_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>