force-app/main/default/objects/sked__Resource_Requirement__c/fields/sked__Job_Allocation_Count__c.field-meta.xml
<CustomField>
    <fullName>sked__Job_Allocation_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Job Allocation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>