force-app/main/default/objects/sked__Resource_Requirement__c/fields/sked__Relative_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Relative_Start__c</fullName>
    <description>Relative Start in minutes</description>
    <label>Relative Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>