force-app/main/default/objects/sked__Resource_Requirement__c/fields/sked__Scheduled_End1__c.field-meta.xml
<CustomField>
    <fullName>sked__Scheduled_End1__c</fullName>
    <formula>sked__Scheduled_Start1__c + BLANKVALUE( sked__Duration__c, sked__Job__r.sked__Duration__c ) / 1440</formula>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>