force-app/main/default/objects/sked__Resource_Requirement__c/fields/sked__Scheduled_Start1__c.field-meta.xml
<CustomField>
    <fullName>sked__Scheduled_Start1__c</fullName>
    <formula>sked__Job__r.sked__Start__c  +  sked__Relative_Start__c  / 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>