force-app/main/default/objects/sked__Resource_Requirement__c/validationRules/sked__EndTimeNotAfterJobFinish.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__EndTimeNotAfterJobFinish</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Scheduled_End1__c ) ) , NOT( ISNULL( sked__Job__r.sked__Finish__c ) ), sked__Scheduled_End1__c &gt; sked__Job__r.sked__Finish__c )</errorConditionFormula>
    <errorMessage>End time cannot be after job end time</errorMessage>
</ValidationRule>