force-app/main/default/objects/sked__Resource_Requirement__c/validationRules/sked__QuantityGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__QuantityGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>sked__Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than 0</errorMessage>
</ValidationRule>