force-app/main/default/objects/sked__Resource_Requirement__c/validationRules/sked__StartTimeNotBeforeJobStart.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartTimeNotBeforeJobStart</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Scheduled_Start1__c ) ) , NOT( ISNULL( sked__Job__r.sked__Start__c ) ), sked__Scheduled_Start1__c &lt; sked__Job__r.sked__Start__c )</errorConditionFormula>
    <errorMessage>Start time cannot be before job start time</errorMessage>
</ValidationRule>