force-app/main/default/objects/sked__Resource_Requirement__c/validationRules/sked__TimeSourceMustHaveDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__TimeSourceMustHaveDuration</fullName>
    <active>true</active>
    <errorConditionFormula>AND( sked__Job_Allocation_Time_Source__c  = true , ISNULL( sked__Duration__c ) )</errorConditionFormula>
    <errorDisplayField>sked__Duration__c</errorDisplayField>
    <errorMessage>Duration must be set if Job Allocation Time Source is true</errorMessage>
</ValidationRule>